--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -28,11 +28,11 @@
 2008年赵国良被警察抄家，抢走了两卡车的打印机、刻录机、光盘、真相手册等物品。老赵一进拘留所就喊：“法轮大法好，真善忍好”。一帮警察一拥而上对他一顿暴打，然后给他带上18斤的大脚镣，给他系上约束带，将手铐脚镣拴在板床上的铁环上固定住，前后左右4个犯人看着他。老赵一看到警察从监室门前路过，就不停地喊.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 11:17 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1" target="_blank">【命理】应享福或应受苦 命中有定数</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/20/12/30/n12653736.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/a6155cd0ac42d2439b09d6c4d78d34ef-150x120.png" align ="left"></a>倪瞎子向神抱怨：“我本是世家大族，却如此饥寒。真的是天之无眼，神之不灵也。”结果如何呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 8:56 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/1/n12660244.md#1" target="_blank">鸡鸣晓月窑家墟（2）</a><br></h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/1/n12660244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/1709032223592483-150x120.jpg" align ="left"></a>屈指算来，疯子振家若还活着，今年也该有60多、快70岁了吧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 5:00 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677690.md#1" target="_blank">西江月．劝善</a><br></h3> 末日濒临毁灭，佛恩救度回还。 洪扬大法正人间，真相慈悲劝善。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月12日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/11/n12681231.md#1" target="_blank">七绝：正义归来（三首）</a><br></h3>正义迟来定会来， 良知月下莫徘徊。 劈开铁幕看真相， 神佑川翁复上台！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 11:11 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677686.md#1" target="_blank">诗歌：守护</a><br></h3>守护自由人挺川， 人潮汹涌起惊澜。 喊声震碎强权梦， 民怨沸腾国会山。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月11日 12:11 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677680.md#1" target="_blank">西江月．撕裂</a><br></h3> 左派阴推共产，红魔渗透金钱。 潜摧正统许多年，小鬼人间作乱。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 9:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673802.md#1" target="_blank">神韵行（五十）康熙皇朝</a><br></h3>一生心与万民同， 夙夜孜劳缔造功。 率土恩承三德乂， 普天绮散八旗风。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/9/n12677264.md#1" target="_blank">七律：一月六日华盛顿</a><br></h3>天低云黑山庄暗 人涌旗幡塞华城 两院众参联席辩 几时驴象混声争......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 8:21 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/21/1/7/n12673828.md#1" target="_blank">神韵行（四十九）大明侍卫</a><br></h3>浩气英风扑面来， 因疑飞将下云台。 九重紫气惊龙矫， 一片丹心向日开。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 12:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fulfvx3112/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/fulfvx3112/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
